0.8.4
 - Update emodulus look-up table (dclab 0.3.1.dev3) (#202)
 - Bugfixes:
   - Image/trace panel shows wrong event when the mouse pointer hovers
     from one scatter plot to another
   - Hierarchy children: image, contour, and trace data were not
     displayed in the image/trace panel (dclab 0.3.1.dev1) (#100)
   - Hierarchy children did not support manual filters (dclab 0.3.1.dev2)
0.8.3
 - Prefer sample name from para.ini over data folder name (dclab 0.3.0.dev15)
 - Support new .rtdc file format (dclab 0.3.0.dev20) (#151)
 - Bugfixes:
   - Automatically fix inverted plotting range
   - Enable scrolling in data export dialogs
   - Ignore missing features during data export
   - Plotting circularity with isoelastics failed (dclab 0.3.0.dev21) (#197)
   - Plotting errors with log-scale axes (#194, #195)
   - SHIFT+ENTER shortcut did not update filters
   - Fixed memory leak (#187)
0.8.2
 - Add fluorescence crosstalk correction (#185)
 - Bugfixes:
   - Regression: Session autosaving broken (#191)
   - Young's modulus not updated (dclab 0.2.9.dev9) (#190)
   - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev15) (#189)
   - Mouse cursor stuck in wait when plotting hierarchy data (#188)
 - Code cleanup:
   - Use the term "feature" consistently (dclab 0.2.9.dev2)
   - Use file format agnostic fluorescence trace keys (dclab 0.2.9.dev4)
0.8.1
 - Update internal configuration parameter names (dclab 0.2.8)
 - Cache event counts of tdms-based data sets on disk (#179)
 - Bugfixes:
   - KeyError when isoelastics not defined for combination of axes (#177)
   - Wrong channel width when loading ShapeIn 2.0.1 tdms data (dclab 0.2.9)
0.8.0
 - Remember directory for searching missing measurement data
 - Bugfixes:
   - Cannot open old session files with hierarchies when the measurement
     data location has changed (#174)
   - Cannot open polygon filters exported with ShapeOut versions < 0.7.6 (#174)
 - Code cleanup:
   - Move program-relevant data to "shapeout" directory