@@ -99,12 +99,12 @@ class ControlPanel(ScrolledPanel):
 
 
     def OnChange(self, e=None):
-        self.OnChangeFilter(updp=False)
+        self.OnChangeFilter(updp=False, draw=False)
         self.OnChangePlot(updp=False)
         self.UpdatePages()
 
 
-    def OnChangeFilter(self, e=None, updp=True):
+    def OnChangeFilter(self, e=None, updp=True, draw=True):
         # get all values
         wx.BeginBusyCursor()
         ctrls = self.page_filter.GetChildren()
@@ -144,19 +144,20 @@ class ControlPanel(ScrolledPanel):
                     c.SetValue(str(minsize))
         self.analysis.SetParameters(cfg)
 
-        # Only update the plotting data.
-        # (Until version 0.6.1 the plots were recreated after
-        #  each update, which caused a memory leak)
-        plot_window = self.frame.PlotArea.mainplot.plot_window
-        plots = plot_window.component.components
-        for plot in plots:
-            for mm in self.analysis.measurements:
-                if plot.id == mm.identifier:
-                    plot_scatter.set_scatter_data(plot, mm)
-                    plot_scatter.reset_inspector(plot)
-
-            if plot.id == "ShapeOut_contour_plot":
-                plot_contour.set_contour_data(plot, self.analysis.measurements)
+        if draw:
+            # Only update the plotting data.
+            # (Until version 0.6.1 the plots were recreated after
+            #  each update, which caused a memory leak)
+            plot_window = self.frame.PlotArea.mainplot.plot_window
+            plots = plot_window.component.components
+            for plot in plots:
+                for mm in self.analysis.measurements:
+                    if plot.id == mm.identifier:
+                        plot_scatter.set_scatter_data(plot, mm)
+                        plot_scatter.reset_inspector(plot)
+    
+                if plot.id == "ShapeOut_contour_plot":
+                    plot_contour.set_contour_data(plot, self.analysis.measurements)
         
         if updp:
             self.UpdatePages()
@@ -180,11 +181,11 @@ class ControlPanel(ScrolledPanel):
         ctrls += list(self.page_scat.GetChildren())
         samdict = self.analysis.measurements[0].config.copy()["plotting"]
         newfilt = rt_config.CaseInsensitiveDict()
-        
+
         # identify controls via their name correspondence in the cfg
         for c in ctrls:
             name = c.GetName()
-            if samdict.has_key(name):
+            if name in samdict:
                 var = name
                 if isinstance(c, wx.ComboBox) and hasattr(c, "data"):
                     # handle combobox selections such that the string in the
@@ -212,6 +213,7 @@ class ControlPanel(ScrolledPanel):
                         col = np.array([col.Red(), col.Green(),
                                        col.Blue(), col.Alpha()])/255
                         mm.config["plotting"]["contour color"] = col.tolist()
+        
         cfg = {"plotting": newfilt }
         self.analysis.SetParameters(cfg)
 
