@@ -6,6 +6,7 @@
    - Hierarchy children: image, contour, and trace data were not
      displayed in the image/trace panel (dclab 0.3.1.dev1) (#100)
    - Hierarchy children did not support manual filters (dclab 0.3.1.dev2)
+   - Regression: Setting plotting range manually not possible (#201)
 0.8.3
  - Prefer sample name from para.ini over data folder name (dclab 0.3.0.dev15)
  - Support new .rtdc file format (dclab 0.3.0.dev20) (#151)
